--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^9.3.0",
     "@react-three/rapier": "2.0",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
